# sujin

./: .gitignore  README.md  docker-compose.yml
apps/mobile/: README.md  pubspec.yaml
apps/mobile/android/app/: build.gradle.kts
apps/mobile/ios/Runner.xcodeproj/: project.pbxproj
apps/mobile/lib/: main.dart
apps/mobile/scripts/: serve_mobile_web.ps1
apps/mobile/test/: widget_test.dart
apps/mobile/web/: index.html  manifest.json
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  companies.py  dashboard.py  dispatches.py  drivers.py  orders.py  router.py  vehicles.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  base.py  company.py  dispatch.py  driver.py  enums.py  location.py  order.py  order_stop.py  user.py  vehicle.py
backend/app/schemas/: auth.py  company.py  dashboard.py  dispatch.py  driver.py  order.py  vehicle.py
backend/app/services/: dashboard.py
backend/scripts/: apply_schema.py  seed_demo_data.py  test_postgres_connection.py
backend/sql/: 001_initial_schema.sql
backend/tests/: test_config.py  test_main.py
backend/tms_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: architecture.md
infra/aws/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
scripts/: run_tailscale_funnel.ps1  start_all_in_one.ps1  start_cloudflare_tunnel.ps1  start_tailscale_fixed_url.ps1  stop_tailscale_fixed_url.ps1
(+19 files in other folders)
